# garch-binary

./: README.md  binary_option_pricing.py  check_asset_ids.py  config.py  data_loader.py  debug_bids_asks.py  debug_db_connection.py  find_bitcoin_asset_ids.py  garch_backtest.py  garch_model.py  main.py  performance_metrics.py  pyproject.toml  run_garch_backtest.py  test_garch_synthetic.py
